--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.28.0",
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.9.1",
+    "moment": "^2.29.4",
+    "mongoose": "^7.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.2",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "slugify": "^1.6.5",
+    "styled-components": "^5.3.9",
+    "uuid": "^9.0.0",
+    "yup": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.7"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
