--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.9",
     "uuid": "^9.0.0",
