--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
