--- a/package.json
+++ b/package.json
@@ -11,26 +11,38 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "cloudinary": "^1.36.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.19.1",
     "framer-motion": "^10.9.1",
+    "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
+    "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.5",
     "styled-components": "^5.3.9",
     "uuid": "^9.0.0",
+    "validator": "^13.9.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
