--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^7.0.3",
     "multer": "^1.4.5-lts.1",
     "next": "13.2.4",
+    "next-auth": "^4.22.1",
     "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
