--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-gallery": "^1.2.11",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.29.0",
