--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.19.1",
     "framer-motion": "^10.9.1",
+    "jotai": "^2.0.4",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^7.0.3",
